Added grid to Dashboard and created blank Register page

--- a/excel-tracker-application/package.json
+++ b/excel-tracker-application/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "3.3.0",
     "reactjs-popup": "^1.5.0",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
